--- a/webempresa_Frontend/webempresa_Frontend/index.html
+++ b/webempresa_Frontend/webempresa_Frontend/index.html
@@ -27,7 +27,7 @@
         <!-- Navegación -->
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
           <div class="container">
-            <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="index.html">Pandaz</a>
+            <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="index.html">PandazBoutique</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -37,13 +37,10 @@
                   <a class="nav-link text-uppercase text-expanded" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item px-lg-4">
-                  <a class="nav-link text-uppercase text-expanded" href="about.html">Historia</a>
+                  <a class="nav-link text-uppercase text-expanded" href="about.html">Acerca de</a>
                 </li>
                 <li class="nav-item px-lg-4">
-                  <a class="nav-link text-uppercase text-expanded" href="services.html">Servicios</a>
-                </li>
-                <li class="nav-item px-lg-4">
-                  <a class="nav-link text-uppercase text-expanded" href="store.html">Visítanos</a>
+                  <a class="nav-link text-uppercase text-expanded" href="store.html">Ubicacion</a>
                 </li>
                 <li class="nav-item px-lg-4">
                   <a class="nav-link text-uppercase text-expanded" href="contact.html">Contacto</a>
