modificacion ubicacion template

--- a/webempresa_Frontend/webempresa_Frontend/store.html
+++ b/webempresa_Frontend/webempresa_Frontend/store.html
@@ -54,7 +54,7 @@
   </nav>
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
-      <span class="site-heading-upper text-primary mb-3">ENCUENTRANOS</span>
+      <span class="site-heading-upper text-primary mb-3">Nuestra Ubicacion</span>
     </h1>
 
 
@@ -64,36 +64,38 @@
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-5">
-                <span class="section-heading-upper">Te esperamos</span>
-                <span class="section-heading-lower">Visítanos</span>
+                <span class="section-heading-upper">Encuentranos</span>
               </h2>
               <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Lunes a viernes
-                  <span class="ml-auto">7:00 a 20:00</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Sábados
-                  <span class="ml-auto">9:00 a 17:00</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Domingos
-                  <span class="ml-auto">Cerrado</span>
+                 Entregas - Lunes a Domingos
+                  <span class="ml-auto">15:00 a 22:00</span>
                 </li>
               </ul>
               <p class="address mb-5">
                 <em>
-                  <strong>Avd. Infusiones nº 127</strong>
+                  <strong>Puntos de entrega (Apodaca)</strong>
                   <br>
-                  Barcelona
+                    Mi tiendita Metroplex.
+                  <br>
+                  Plaza Sendero Apodaca.
+                  <br>
+                  Walmart Apodaca E-sexta.
+                  <br>
+                  Soriana Fresnos.
+                  <br>
+                  Smart Av. Afganistan.
                 </em>
               </p>
               <p class="mb-0">
                 <small>
-                  <em>Llámanos y pregunta</em>
                 </small>
+                <strong>Contáctanos</strong>
+                <p>Haz clic en el botón de abajo para enviarnos un mensaje por WhatsApp.</p>
+                <a href="https://wa.me/528125897393?text=Hola%20quiero%20más%20información%20sobre%20sus%20servicios" target="_blank">
+                    <button>Contactar por WhatsApp</button>
+                </a>
                 <br>
-                (317) 585-8468
               </p>
             </div>
           </div>
